<package format="3">
  <name>neato_driver</name>
  <version>0.3.0</version>
  <description>This is a generic driver for the Neato Botvac Robotic Vacuums.</description>
  <maintainer email="jnugen@gmail.com">James Nugen</maintainer>
  <license>BSD</license>

  <export>
    <build_type>ament_python</build_type>
    <exec_depend>rclpy</exec_depend>
  </export>
</package>
