<package format="3">
  <name>neato_robot</name>
  <version>0.3.0</version>
  <description>
    Metapackage for drivers for the Neato Botvac robots.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="ferguson@cs.albany.edu">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/neato_robot</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>neato_msgs</exec_depend>
  <exec_depend>neato_driver</exec_depend>
  <exec_depend>neato_node</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
